--- a/admin/templates/checkout.html
+++ b/admin/templates/checkout.html
@@ -3,7 +3,7 @@
   
     <h2>Vendas - Obra de Maria DF</h2>
     <h3>Compre agora!</h3>
-    <p class="lead">Você está adquirindo uma peregrinação com a Obra de Maria Brasília. Preencha seus dados</p>
+    <p class="lead">Você está adquirindo um Pacote de Peregrinação com a Obra de Maria Brasília. Preencha seus dados e escolha sua forma de pagamentos</p>
   </div>
   <form class="needs-validation submit" novalidate="" action="#" id="form" >
   <div class="row">
