--- a/admin/templates/cadastro.grupoEdita.html
+++ b/admin/templates/cadastro.grupoEdita.html
@@ -292,6 +292,20 @@ $("#ano").mask("9999");
         </div>
         <div id="collapseTwo" class="accordion collapse" style="height: 0; ">
           <div class="accordion-inner">
+            <h4>Transferência</h4>
+            <div class="row">
+              <div class="span6">
+                <div class="control-group">
+                  <label for="bitBoleto" class="control-label">Ativar:</label>
+                  <div class="controls">
+                    <input type="radio" name="bitTransferencia" id="bitBoletoSim" value="1" {bitTransferenciaSim} class="required"> Sim 
+                    <input type="radio" name="bitTransferencia" id="bitBoletoNao" value="0" {bitTransferenciaNao} class="required"> Não
+                  </div>
+                </div>
+              </div>
+              
+            </div>
+            <hr/>
                 <h4>Boleto</h4>
                 <div class="row">
                   <div class="span5">
