--- a/admin/templates/checkout.html
+++ b/admin/templates/checkout.html
@@ -75,21 +75,28 @@
 
       <h4 class="mb-3">Formas de Pagamento</h4>
       <div class="d-block my-3">
+        <!-- BEGIN BLOCK_FORMA_AVISTA -->
         <div class="custom-control custom-radio">
-          <input value="formaAVista" id="formaAVista" name="forma" type="radio" class="custom-control-input" checked="" required="">
+          <input value="formaAVista" id="formaAVista" name="forma" type="radio" class="custom-control-input" {FORMA_AVISTA_CHECKED} required="">
           <label class="custom-control-label" for="formaAVista">A Vista {TEXT_DESCONTO_A_VISTA} <span class="badge badge-success {DISPLAY_DOLLAR}">Dollar: {COTACAO_CURRENCY}</span></label>
         </div>
+        <!-- END BLOCK_FORMA_AVISTA -->
+        <!-- BEGIN BLOCK_FORMA_ENTRADA -->
         <div class="custom-control custom-radio">
-          <input value="formaEntrada" id="formaEntrada" name="forma" type="radio" class="custom-control-input" required="">
+          <input value="formaEntrada" id="formaEntrada" name="forma" type="radio" class="custom-control-input" {FORMA_ENTRADA_CHECKED} required="">
           <label class="custom-control-label" for="formaEntrada">Entrada + Parcelado <span class="badge badge-success {DISPLAY_DOLLAR}">Dollar: {COTACAO_ENTRADA_CURRENCY}</span></label>
         </div>
+        <!-- END BLOCK_FORMA_ENTRADA -->
+        <!-- BEGIN BLOCK_FORMA_PARCELADO -->
         <div class="custom-control custom-radio">
-          <input value="formaParcelado" id="formaParcelado" name="forma" type="radio" class="custom-control-input" required="">
+          <input value="formaParcelado" id="formaParcelado" name="forma" type="radio" class="custom-control-input" {FORMA_PARCELADO_CHECKED} required="">
           <label class="custom-control-label" for="formaParcelado">Parcelado <span class="badge badge-success {DISPLAY_DOLLAR}">Dollar: {COTACAO_PARCELADO_CURRENCY}</span></label>
         </div>
+        <!-- END BLOCK_FORMA_PARCELADO -->
+
         <!-- BEGIN BLOCK_FORMA_CUSTOMIZADA -->
         <div class="custom-control custom-radio">
-          <input value="formaOutros" id="formaOutros" name="forma" type="radio" class="custom-control-input" required="">
+          <input value="formaOutros" id="formaOutros" name="forma" type="radio" class="custom-control-input" {FORMA_CUSTOMIZADA_CHECKED} required="">
           <label class="custom-control-label" for="formaOutros">{NOME_CUSTOMIZADA}</label>
         </div>
         <!-- END BLOCK_FORMA_CUSTOMIZADA -->
