--- a/admin/templates/roteiro.html
+++ b/admin/templates/roteiro.html
@@ -15,6 +15,12 @@
                     window.location.href = 'roteiro.response.php?acao=excluirfoto&id='+$("#roteiro").val()+'&idfoto='+$(this).attr('id');
                 }
         });
+        $(".excluirReview").click(function(){
+            if(confirm("Tem certeza que deseja excluir esse comentário")){
+                    window.location.href = 'roteiro.response.php?acao=excluirreview&id='+$("#roteiro").val()+'&idReview='+$(this).attr('id');
+                }
+        });
+        
         $(".removeItinerary").click(function(){
             if(confirm("Tem certeza que deseja excluir esse etinerário")){
                     window.location.href = 'roteiro.response.php?acao=ecluirItinerary&id='+$("#roteiro").val()+'&iditineray='+$(this).attr('id');
@@ -53,7 +59,8 @@
         <li class="{ACITVE_1}"><a href="#profile" data-toggle="tab">DADOS CARD</a></li>
         <li class="{ACITVE_2}"><a href="#messages" data-toggle="tab">DADOS ROTEIRO</a></li>
         <li class="{ACITVE_3}"><a href="#settings" data-toggle="tab">FOTOS</a></li>
-        <li class="{ACITVE_4}"><a href="#itineraries" data-toggle="tab">ROTEIROS</a></li>
+        <li class="{ACITVE_4}"><a href="#itineraries" data-toggle="tab">ROTEIRO</a></li>
+        <li class="{ACITVE_5}"><a href="#coments" data-toggle="tab">COMENTÁRIOS</a></li>
         <!-- END BLOCK_EDITAR_PILL -->
       </ul>
       <div class="tab-content">
@@ -327,7 +334,67 @@
                 </form>
             </fieldset>
         </div>
-
+        <div class="tab-pane {ACITVE_5}" id="coments">
+            <fieldset>
+                <legend>COMENTÁRIOS</legend>
+                <form class="form" id="frmEdit" method="post" action="roteiro.response.php" enctype="multipart/form-data" >
+                    <div class="row">
+                        <div class="form-field span6">
+                           <div class="control-group">
+                               <label for="foto" class="control-label">Nome:</label>
+                               <p>(nome do cliente)</p>
+                               <input type="text" required name="name"class="form-control span6 input-xlarge"></textarea>                
+                           </div>                           
+                       </div>
+                       <div class="form-field span6">
+                        <div class="control-group">
+                            <label for="foto" class="control-label">Data:</label>
+                            <p>(data do comentário)</p>
+                            <input data-datepicker="datepicker" type="text" required name="data"class="form-control span6 input-xlarge"></textarea>                
+                        </div>                           
+                    </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-field span12">
+                           <div class="control-group">
+                               <label for="foto" class="control-label">Comentário:</label>
+                               <p>(digite um comentário do cliente)</p>
+                               <textarea required rows="4" required name="coment"class="form-control span12 input-xlarge"></textarea>                
+                           </div>
+                           
+                       </div>
+                    </div>
+                <div class="row">
+                 <div class="form-field span12">
+                    <div class="control-group">
+                        <label for="foto" class="control-label">Foto:</label>
+                        <p>(foto do cliente)</p>
+                        <input required name="foto" type="file" class="form-control span12 input-xlarge"/>                
+                    </div>
+                    
+                </div>
+                </div>
+                <div class="form-actions">
+                    <input type="hidden" value="review" name="acao" id="acao" />
+                    <input type="hidden" value="{ID}" name="id" id="idReview" />
+                    <button class="btn btn-primary" type="submit">ENVIAR COMENTÁRIO</button>
+                </div>
+                <div class="row">
+                    <!-- BEGIN BLOCK_REVIEW -->
+                    <div class="span6 text-center">
+                       <img src="../img/reviews/{FOTO_REVIEW}" style="height: 50px;"/>
+                       <h4>{COMENT_NAME}</h4>
+                       <p>{COMENT_REVIEW}</p>
+                       <p>{COMENT_DATE}</p>
+                       <button type="button" class="btn btn-danger excluirReview" id="{ID_REVIEW}"><i class="icon-trash icon-white"></i></button>
+                        
+                    </div>
+                    <!-- END BLOCK_REVIEW -->
+                </div>
+                
+                </form>
+            </fieldset>
+        </div>
 
         <!-- END BLOCK_EDITAR -->
       </div>
