--- a/admin/templates/roteiro.html
+++ b/admin/templates/roteiro.html
@@ -236,7 +236,7 @@
                         <div class="control-group">
                             <label for="description" class="control-label">DESCRIÇÃO:</label>
                             <p>Descrição que aparece  no roteiro</p>
-                            <textarea rows="10" required name="description" class="ckeditor input-xlarge form-control span12">{DESCRIPTION}</textarea>                            
+                            <textarea rows="10" name="description" class="ckeditor input-xlarge form-control span12">{DESCRIPTION}</textarea>                            
                         </div>
                     </div>
                 </div>
