--- a/admin/templates/roteiro.html
+++ b/admin/templates/roteiro.html
@@ -87,6 +87,7 @@
                             <p class="text-sm">Para filtrar os roteiros por continente</p>
                             <div class="controls">
                             <input type="checkbox" name="continent[]" value="ÁFRICA" {CHECKED_AFRICA}/>  África<br/>
+                            <input type="checkbox" name="continent[]" value="AMÉRICA CENTRAL" {CHECKED_AMC}/> Ámérica Central<br/>
                             <input type="checkbox" name="continent[]" value="AMÉRICA DO NORTE" {CHECKED_AMN}/> Ámérica do Norte<br/>
                             <input type="checkbox" name="continent[]" value="AMÉRICA DO SUL" {CHECKED_AMS}/> Ámerica do Sul<br/>
                             <input type="checkbox" name="continent[]" value="ÁSIA" {CHECKED_ASIA}/> Ásia<br/>
@@ -343,14 +344,14 @@
                            <div class="control-group">
                                <label for="foto" class="control-label">Nome:</label>
                                <p>(nome do cliente)</p>
-                               <input type="text" required name="name"class="form-control span6 input-xlarge"></textarea>                
+                               <input type="text" required name="name"class="form-control span6 input-xlarge"/>        
                            </div>                           
                        </div>
                        <div class="form-field span6">
                         <div class="control-group">
                             <label for="foto" class="control-label">Data:</label>
                             <p>(data do comentário)</p>
-                            <input data-datepicker="datepicker" type="text" required name="data"class="form-control span6 input-xlarge"></textarea>                
+                            <input data-datepicker="datepicker" type="text" required name="data"class="form-control span6 input-xlarge"/>           
                         </div>                           
                     </div>
                     </div>
