--- a/admin/templates/cadastro.grupoEdita.html
+++ b/admin/templates/cadastro.grupoEdita.html
@@ -210,7 +210,7 @@ $("#ano").mask("9999");
     </div>
   </div>
   <div class="row">
-    <div class="span6">
+    <div class="span4">
      <div class="control-group">
       <label for="pauta" class="control-label">Pauta de Reunião:</label>
       <div class="controls">
@@ -219,7 +219,7 @@ $("#ano").mask("9999");
         <a href="docs/{pautaAnexo}" target="_blank">{pautaAnexo}</a> </div>
     </div>
     </div>
-    <div class="span6">
+    <div class="span4">
       <div class="control-group">
        <label for="pauta" class="control-label">Imagem Destaque:</label>
        <div class="controls">
@@ -229,6 +229,14 @@ $("#ano").mask("9999");
           </div>
      </div>
      </div>
+     <div class="span3">
+      <div class="control-group">
+        <label for="cotacaoCustomizado" class="control-label">Cambio Customizado:</label>  
+      <div class="controls">
+          <input type="text" id="cotacaoCustomizado" class="input-xlarge span1" name="cotacaoCustomizado" value="{cotacaoCustomizado}" placeholder="Cotação parcelado" onKeyPress="return(MascaraMoeda(this,'.',',',event))">
+      </div>
+        </div>
+      </div>
   </div>
     <div class="accordion" id="accordion">
       <div class="accordion-group">
@@ -368,6 +376,7 @@ $("#ano").mask("9999");
                     </div>
                   </div>
                 </div>
+                <hr/>
                 <h4>Customizado</h4>
                 <div class="row">
                   <div class="span5">
@@ -379,6 +388,7 @@ $("#ano").mask("9999");
                       </div>
                     </div>
                   </div>
+                  
                   <div class="span6">			
                     <div class="control-group">
                       <label for="nomeCustomizado" class="control-label">Nome:</label>
