--- a/admin/templates/roteiro.html
+++ b/admin/templates/roteiro.html
@@ -233,6 +233,25 @@
                 </div>
                 </div>
                 <div class="row">
+                    <div class="form-field span6">
+                        <div class="control-group">
+                            <label for="padreName" class="control-label">NOME DO PADRE:</label>
+                            <p>Nome do padre </p>
+                            <input required name="padreName" type="text" class="form-control span6 input-xlarge" value="{PADRE_NAME}"/>
+                        </div>
+                    </div>
+                    <div class="form-field span6">
+                        <div class="control-group">
+                            <label for="padreImage" class="control-label">Foto do Padre:</label>
+                            <p>(tamanho 1680x555)</p>
+                            <input name="padreImage" type="file" class="form-control span6  input-xlarge"/>
+                            <img src='../img/packages/{PADRE_IMAGE}' style="height: 100px;"/>
+                            <p>{PADRE_IMAGE}</p>
+                        </div>
+                        
+                    </div>
+                    </div>
+                <div class="row">
                     <div class="form-field span12">
                         <div class="control-group">
                             <label for="description" class="control-label">DESCRIÇÃO:</label>
