pagamentos em cartao a vista e remover os pagamentos manuais

--- a/admin/templates/bilhete.html
+++ b/admin/templates/bilhete.html
@@ -155,7 +155,7 @@
         <!--  END BLOCK_PARCELADO -->
          <!--  BEGIN BLOCK_CARTAO_PARCELADO -->
          <h6>Parcelamento no cartão de crédito</h6>
-         <a class="btn btn-primary btn-lg btn-block" href="{URLGN_CARTAO}" >PAGAR COM CARTÃO</a>
+         <a class="btn btn-primary btn-lg btn-block" href="{URLGN_CARTAO}" target="_blank" >PAGAR COM CARTÃO</a>
          <!--  END BLOCK_CARTAO_PARCELADO --> 
       </div>      
          
