--- a/admin/templates/checkout.html
+++ b/admin/templates/checkout.html
@@ -125,7 +125,7 @@
         <!-- END BLOCK_CHEQUE_AVISTA -->
         <!-- BEGIN BLOCK_CARTAO_AVISTA -->
       <div class="custom-control custom-radio">
-        <input value="credit_card" id="creditoAVista" name="pagamentoAVista" checked type="radio" class="custom-control-input" required="">
+        <input value="credit_card" id="creditoAVista" name="pagamentoAVista" type="radio" class="custom-control-input" required="">
         <label class="custom-control-label" for="creditoAVista" id="creditoAVistaLabel">Cartão de crédito</label>
       </div>
       <!-- END BLOCK_CARTAO_AVISTA -->
